--- a/templates/keda.yaml
+++ b/templates/keda.yaml
@@ -42,7 +42,7 @@ spec:
         namespace: flux-system
       interval: 15m
       dependsOn:
-        - name: keda-namespace
+        - name: keda-namespace-component
   values:
     additionalLabels:
       gwcp.guidewire.com/version: {{ .Values.keda.version | quote }}
