--- a/templates/keda.yaml
+++ b/templates/keda.yaml
@@ -11,7 +11,7 @@ metadata:
     gwcp.guidewire.com/app-name: {{ .Values.keda.appName | quote }}
     gwcp.guidewire.com/tenant-name: quadrant-shared
 spec:
-  interval: 5m
+  interval: 15m
   url: https://kedacore.github.io/charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
@@ -30,8 +30,8 @@ metadata:
     meta.helm.sh/release-name: keda-release
 spec:
   releaseName: keda
-  targetNamespace: keda-system
-  interval: 2m0s
+  targetNamespace: {{ .Values.namespace.name }}
+  interval: 15m
   chart:
     spec:
       chart: keda
@@ -40,9 +40,9 @@ spec:
         kind: HelmRepository
         name: keda
         namespace: flux-system
-      interval: 10m0s
+      interval: 15m
       dependsOn:
-        - name: atmos-namespace-helmrelease
+        - name: keda-namespace
   values:
     additionalLabels:
       gwcp.guidewire.com/version: {{ .Values.keda.version | quote }}
