--- a/templates/namespace.yaml
+++ b/templates/namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: atmos-namespace-github
+  name: keda-namespace
   namespace: default
 spec:
   interval: 10m0s
@@ -11,16 +11,16 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: atmos-namespace-helmrelease
+  name: keda-namespace
   namespace: default
 spec:
+  interval: 15m
   chart:
     spec:
       chart: atmos-namespace
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: atmos-namespace-github
+        name: keda-namespace
       version: {{ .Values.namespace.version | quote }}
-  interval: 10m0s
   values: {{ toYaml .Values.namespace | nindent 4 }}
